--- a/LightMeter/res/values/styles.xml
+++ b/LightMeter/res/values/styles.xml
@@ -22,6 +22,13 @@
     <item name="android:textSize">12sp</item>
     <item name="android:textColor">#333</item>
   </style>
+  <style name="HelpContentAppearance" parent="android:style/TextAppearance">
+    <item name="android:textSize">12sp</item>
+    <item name="android:textColor">#CCC</item>
+  </style>
+  <style name="HelpTitleAppearance" parent="android:style/TextAppearance">
+    <item name="android:textColor">#EEE</item>
+  </style>
   <style name="SmallerLightTextAppearance" parent="android:style/TextAppearance">
     <item name="android:textSize">12sp</item>
   </style>
