--- a/LightMeter/res/layout/light_value_selector_dialog.xml
+++ b/LightMeter/res/layout/light_value_selector_dialog.xml
@@ -39,22 +39,25 @@
           android:gravity="left"
           android:prompt="@string/scenario_spinner_prompt"/>
     </TableRow>
-  </TableLayout>
-  <TableLayout android:layout_width="fill_parent"
-               android:layout_height="wrap_content">
     <TableRow>
-      <Button
-          android:id="@+id/select_light_value_ok_button"
-          android:text="@string/ok"
-          android:layout_column="1"
-          android:layout_width="wrap_content"
-          android:layout_height="40dip"/>
-      <Button
-          android:id="@+id/select_light_value_cancel_button"
-          android:text="@string/cancel"
-          android:layout_column="2"
-          android:layout_width="wrap_content"
-          android:layout_height="40dip"/>
+      <TableLayout android:layout_width="fill_parent"
+                   android:layout_height="wrap_content" android:gravity="center" >
+        <TableRow>
+
+          <Button
+              android:id="@+id/select_light_value_ok_button"
+              android:text="@string/ok"
+              android:layout_column="1"
+              android:layout_width="wrap_content"
+              android:layout_height="40dip"/>
+          <Button
+              android:id="@+id/select_light_value_cancel_button"
+              android:text="@string/cancel"
+              android:layout_column="2"
+              android:layout_width="wrap_content"
+              android:layout_height="40dip"/>
+        </TableRow>
+      </TableLayout>
     </TableRow>
   </TableLayout>
 </LinearLayout>
