--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -152,15 +152,15 @@
     <TableRow android:gravity="center_vertical">
       <Spinner
           android:id="@+id/exposureSpinner"
-          android:layout_width="fill_parent"
           android:layout_height="wrap_content"
+          android:layout_width="fill_parent"
           android:drawSelectorOnTop="true"
           android:layout_column="1"
           android:prompt="@string/exposure_spinner_prompt"/>
       <Button android:id="@+id/selectLightValueFromScenarioButton"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              android:text ="from scenarios"
+              android:text ="..."
               android:layout_column="2" />
     </TableRow>
   </TableLayout>
